--- a/src/App.scss
+++ b/src/App.scss
@@ -1212,6 +1212,16 @@
 
   .requeriments-cards{
     width: 80%;
+    align-items: center !important;
+    justify-items: center !important;
+    padding-bottom: 40px;
+    margin-top: 50px;
+    .requeriment-card{
+      
+      img{
+        position: relative !important;
+      }
+    }
   }
 
   .section-5{
