--- a/src/App.scss
+++ b/src/App.scss
@@ -394,7 +394,7 @@
 
 
 //button
-/* From uiverse.io by @nikk7007 */
+
 .button {
   color: var(--orange);
   width: fit-content;
@@ -1505,4 +1505,152 @@
 .stop-scrolling {
   height: 100%;
   overflow: hidden;
+}
+
+
+
+//Input
+.form__group {
+  position: relative;
+  padding: 20px 0 0;
+  margin-top: 10px;
+  width: 100%;
+  max-width: 180px;
+}
+
+.form__field {
+  font-family: inherit;
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid var(--brown);
+  outline: 0;
+  // font-size: 15px;
+  color: var(--dark-gray);
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
+}
+
+.form__field::placeholder {
+  color: transparent;
+}
+
+.form__field:placeholder-shown ~ .form__label {
+  font-size: 15px !important;
+  color: var(--brown);
+  cursor: text;
+  top: 20px;
+}
+
+.form__label {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 13px !important;
+  color: var(--orange);
+  pointer-events: none;
+}
+
+.form__field:focus {
+  padding-bottom: 6px;
+  font-weight: 700;
+  border-width: 2px;
+  border-image: linear-gradient(to right, var(--brown), var(--orange));
+  border-image-slice: 1;
+}
+
+.form__field:focus ~ .form__label {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 13px !important;
+  color: var(--orange);
+  font-weight: 700;
+}
+
+/* reset input */
+.form__field:required, .form__field:invalid {
+  box-shadow: none;
+}
+
+
+.container-form{
+  width: 80%;
+  margin: 100px auto;
+  
+  .text-form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    h2{
+      color: var(--brown);
+    }
+    
+    h3{
+      // margin-TOP: 20px;
+      color: var(--orange);
+    }
+  }
+  
+  .contact-form{
+    width: 60%;
+    // margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 50px;
+    // margin: 50px auto;
+    padding: 40px;
+    justify-items: center;
+    align-items: center;
+    background-color: whitesmoke;
+    gap: 10px;
+    border-radius: 20px;
+    button{
+      margin-top: 40px;
+    }
+    position: relative;
+    
+  }
+
+  .wsapp{
+    color: #1bd741;
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    
+    &:hover{
+      color: var(--white);
+      
+      svg{
+        color: var(--white);
+      }
+    }
+  }
+  
+  .wsapp::before, .wsapp::after {
+    background-color: #1bd741 !important;
+  }
+
+  svg{
+    color: #1bd741;
+    position: relative;
+    // top: 7px;
+    left: 10px;
+  }
+}
+
+.contact{
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.contact-ws{
+  grid-column:2/4;
+  font-size: 15px;
+  justify-self: end;
+  
 }
