--- a/src/App.scss
+++ b/src/App.scss
@@ -651,7 +651,7 @@
   //floating-card
 .card {
   width: 350px;
-  height: 100px;
+  height: 80px;
   padding: 0.5rem;
   background: var(--orange);
   border-radius: 8px;
@@ -670,7 +670,7 @@
   color: white;
 
   h2{
-    padding:20px 5px;
+    padding:25px 10px;
     text-transform: uppercase;
   }
 
@@ -682,7 +682,8 @@
     background-color: transparent;
     border: 1px solid var(--white);
     cursor: pointer;
-    padding: 10px;
+    margin-top: 10px;
+    padding: 12px;
     width: 150px;
     position: relative;
     left: 50%;
@@ -840,6 +841,7 @@
     border-radius: 20px;
     button{
       margin-top: 40px;
+      grid-row: 4;
     }
     position: relative;
     
@@ -1252,10 +1254,11 @@
   .container-form{
     width: 100%;
     margin: 70px auto !important;
+    padding: 30px 120px !important;
   }
   .contact-form{
     width: 85% !important;
-    margin: 0 auto;
+    // margin: 0 auto;
   }
 
   .contact-ws{
@@ -1393,6 +1396,10 @@
       }
     }
   }
+
+  .contact-form{
+    width: 90% !important;
+  }
 }
 
 @media only screen and (min-width:"769px") and (max-width:"1200px"){
@@ -1487,7 +1494,8 @@
     .card{
       width: 250px !important;
       h2{
-        font-size: 14px;
+        font-size: 15px;
+        padding: 22px 10px;
       }
       p{
         font-size: 13px;
@@ -1788,6 +1796,9 @@
     padding: 30px 20px 50px 20px!important;
     .form__group {
       max-width: 80%;
+    }
+    button{
+      grid-row: 10 !important;
     }
   }
   .contact{
